Beginning of an Inventory Screen
Add a new window, currently pulled up when I is pressed. This will serve
as the Inventory screen unless we switch to having the inventory come up
on the same window.

--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -36,6 +36,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -56,6 +58,12 @@
     <Compile Include="EquippedGearInventory.cs" />
     <Compile Include="FGearFactory.cs" />
     <Compile Include="FMonsterFactory.cs" />
+    <Compile Include="InventoryScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InventoryScreen.Designer.cs">
+      <DependentUpon>InventoryScreen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Gear.cs" />
     <Compile Include="GearAugments.cs" />
     <Compile Include="IConsumable.cs" />
@@ -111,6 +119,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="InventoryScreen.resx">
+      <DependentUpon>InventoryScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
