Small Inv Change -> Andrew, please read description
Fully implemented skeleton of Inventory System. May make interface on
top of current abstract class to eliminate need for properties field.
Andrew: I had to go into Hero.cs? and modify the constructor that was
taking a new HeroAttackFactory because it was being passed a Stat item.
It was expecting a DungeonCharacter, so I changed it to
Hero.GetInstance(). Please check this out and change to what is
appropriate, I just patched it so code would compile, I have no idea of
that's what was needed. (I marked where the change happened in code.)

--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -57,8 +57,10 @@
     </ApplicationDefinition>
     <Compile Include="BattleCode\AttackFactory.cs" />
     <Compile Include="CharacterCode\ApplyEffectsUseBehavior.cs" />
+    <Compile Include="CharacterCode\Consumable.cs" />
     <Compile Include="CharacterCode\DungeonCharacter.cs" />
     <Compile Include="CharacterCode\EffectsInformation.cs" />
+    <Compile Include="CharacterCode\Equipable.cs" />
     <Compile Include="CharacterCode\Hero.cs" />
     <Compile Include="BattleCode\HeroAttackFactory.cs" />
     <Compile Include="BattleCode\IMonsterTurnAI.cs" />
