Abstracted item functionality to an interface.
Interface is called InventoryItems, the old InventoryItem class is now
GenericItems. Consumable and Equipable items now require an int key,
list<effectsinformation> properties, and string description to be made.
LivingCreatures and Chests now have inventories. Possibly adding a
dictionary to player for equpied items.

--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -64,7 +64,8 @@
     <Compile Include="CharacterCode\Hero.cs" />
     <Compile Include="BattleCode\HeroAttackFactory.cs" />
     <Compile Include="BattleCode\IMonsterTurnAI.cs" />
-    <Compile Include="CharacterCode\InventoryItem.cs" />
+    <Compile Include="CharacterCode\GenericItems.cs" />
+    <Compile Include="CharacterCode\InventoryItems.cs" />
     <Compile Include="CharacterCode\Monster.cs" />
     <Compile Include="BattleCode\MonsterAttackFactory.cs" />
     <Compile Include="BattleCode\MonsterTurnManager.cs" />
