--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -56,6 +56,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BattleCode\AttackFactory.cs" />
+    <Compile Include="BattleCode\MonsterFactory.cs" />
+    <Compile Include="BattleCode\MonsterTurnAIAgressive.cs" />
     <Compile Include="CharacterCode\ApplyEffectsUseBehavior.cs" />
     <Compile Include="CharacterCode\Consumable.cs" />
     <Compile Include="CharacterCode\DungeonCharacter.cs" />
