--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -79,6 +79,9 @@
     <Compile Include="CharacterCode\NoEffectsUseBehavior.cs" />
     <Compile Include="CharacterCode\RemoveEffectsUseBehavior.cs" />
     <Compile Include="CharacterCode\IUseItemBehavior.cs" />
+    <Compile Include="CharacterSelect.xaml.cs">
+      <DependentUpon>CharacterSelect.xaml</DependentUpon>
+    </Compile>
     <Compile Include="InventoryScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +93,10 @@
     <Compile Include="MazeCode\NullItem.cs" />
     <Compile Include="MazeCode\Position.cs" />
     <Compile Include="MazeCode\Surroundings.cs" />
+    <Page Include="CharacterSelect.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
