Fixed missing files on last commit

--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -56,6 +56,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BattleCode\AttackFactory.cs" />
+    <Compile Include="BattleCode\BattleArena.cs" />
+    <Compile Include="BattleCode\BattleBuilder.cs" />
     <Compile Include="BattleCode\MonsterFactory.cs" />
     <Compile Include="BattleCode\MonsterTurnAIAgressive.cs" />
     <Compile Include="BattleCode\MonsterTurnAIHealer.cs" />
