--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -63,6 +63,9 @@
     <Compile Include="BattleCode\MonsterTurnAIHealer.cs" />
     <Compile Include="BattleCode\MonsterTurnAIPassive.cs" />
     <Compile Include="BattleCode\MonsterTurnManager.cs" />
+    <Compile Include="BattleWindow.xaml.cs">
+      <DependentUpon>BattleWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CharacterCode\ApplyEffectsUseBehavior.cs" />
     <Compile Include="CharacterCode\Consumable.cs" />
     <Compile Include="CharacterCode\DungeonCharacter.cs" />
@@ -96,6 +99,10 @@
     <Compile Include="MazeCode\NullItem.cs" />
     <Compile Include="MazeCode\Position.cs" />
     <Compile Include="MazeCode\Surroundings.cs" />
+    <Page Include="BattleWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="CharacterSelect.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
