--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -184,6 +184,9 @@
     <Content Include="Resources\BattleMusic.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\gameOver.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\intro.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
