Major balance changes, GreaterHeal implemented
Balance changes to all abilities except StrongAtack:
- lesserheal now more mana efficient, heals for less but scales off
strength better, buffs character defense with stacking buff with
repeated use.
- GreaterHeal (implemented) heals for great amount, scales strongly with
strength, buffs agility with stacking buff with repeated use, uses lots
of mana.
- IceConeAttack now deals less damage to each target but scales slightly
better off strength. Lowers target's agility more but for less time.
- LightningBoltAttack now has a non-scaling bottom end damage, but top
end range scales very very well with str. Now increases target agility
by 50% for a few seconds.
- Fireball still not implemented
NOTE: Player base mana has been reduced from 100 to 50.

--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AttackChain\AttackHandler.cs" />
+    <Compile Include="AttackChain\GreaterHealAttackHandler.cs" />
     <Compile Include="AttackChain\IceConeAttackHandler.cs" />
     <Compile Include="AttackChain\LesserHealAttackHandler.cs" />
     <Compile Include="AttackChain\LightningBoltAttackHandler.cs" />
