Large balance changes, fireball/hyperbeam added
Fireball and Hyperbeam skills added.
Balance:
- Weak attack now scales correctly and does more damage.
- Strong attack now does slightly more damage.
- Great heal now heals for a much larger amount, but agility is much
less. Fixed bug causing absurd amounts of agility.
- Lesser Heal now heals for more. Should be more worth it.
- Fireball: Deals damage to primary and surrounding enemies.
- Hyperbeam: Deals single target damage equal to weak attack, reduces
targets Agi, Str, and Def by 20% for a few seconds.
- HERO: Base mana increased from 50 to 80.
- After fights, 30% of hero's max life is returned to help balance risky
ability builds and lower chance of potions.

--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -56,7 +56,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AttackChain\AttackHandler.cs" />
+    <Compile Include="AttackChain\FireballHandler.cs" />
     <Compile Include="AttackChain\GreaterHealAttackHandler.cs" />
+    <Compile Include="AttackChain\HyperbeamHandler.cs" />
     <Compile Include="AttackChain\IceConeAttackHandler.cs" />
     <Compile Include="AttackChain\LesserHealAttackHandler.cs" />
     <Compile Include="AttackChain\LightningBoltAttackHandler.cs" />
