--- a/HerosAndMostersGUI/HerosAndMostersGUI.csproj
+++ b/HerosAndMostersGUI/HerosAndMostersGUI.csproj
@@ -56,11 +56,13 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AttackChain\AttackHandler.cs" />
+    <Compile Include="AttackChain\DemoralizingShoutAttack.cs" />
     <Compile Include="AttackChain\FireballHandler.cs" />
     <Compile Include="AttackChain\GreaterHealAttackHandler.cs" />
     <Compile Include="AttackChain\HyperbeamHandler.cs" />
     <Compile Include="AttackChain\IceConeAttackHandler.cs" />
     <Compile Include="AttackChain\LesserHealAttackHandler.cs" />
+    <Compile Include="AttackChain\LifeTapAttack.cs" />
     <Compile Include="AttackChain\LightningBoltAttackHandler.cs" />
     <Compile Include="AttackChain\NullAttackHandler.cs" />
     <Compile Include="AttackChain\StrongAttackHandler.cs" />
